@@ -1,0 +1,59 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE timetable SYSTEM "schedule.dtd">
+
+<timetable>
+	<days>
+		<day weekday="MON">
+			<timeslot start="10:30" end="12:20">
+				<course code="4650">
+					<booking>
+						<room>se12-306</room>
+						<instructor>medhat</instructor>
+					</booking>
+				</course>
+			</timeslot>
+			<timeslot start="15:30" end="16:20">
+				<course code="4910">
+					<booking>
+						<room>sw9-206</room>
+						<instructor>richard</instructor>
+					</booking>
+				</course>
+			</timeslot>
+			<timeslot start="16:30" end="17:20">
+				<course code="4650">
+					<booking>
+						<room>se6-205</room>
+						<instructor>medhat</instructor>
+					</booking>
+				</course>
+			</timeslot>
+		</day>
+		<day weekday="TUE">
+			<timeslot start="8:30" end="10:20">
+				<course code="4620">
+					<booking>
+						<room>se12-306</room>
+						<instructor>bethany</instructor>
+					</booking>
+				</course>
+			</timeslot>
+			<timeslot start="12:30" end="13:20">
+				<course code="4650">
+					<booking>
+						<room>sw9-206</room>
+						<instructor>medhat</instructor>
+					</booking>
+				</course>
+			</timeslot>
+			<timeslot start="15:30" end="17:20">
+				<course code="4620">
+					<booking>
+						<room>sw3-3615</room>
+						<instructor>bethany</instructor>
+					</booking>
+				</course>
+			</timeslot>
+		</day>		
+	</days>
+</timetable>
