@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE timetable SYSTEM "schedule.dtd">
+
+<timetable>
+	<timeslots>
+		<timeslot start="12:30" end="14:20">
+			<day weekday="WED">
+				<course code="4850">
+					<booking>
+						<room>se6-207</room>
+						<instructor>jim</instructor>
+					</booking>
+				</course>
+			</day>
+		</timeslot>
+	</timeslots>
+</timetable>
